fixed styling issue & spacing

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -48,6 +48,7 @@ h1 {
   margin: auto;
   color: white;
   padding: 20px;
+  margin-top: 40px;
  }
 
 
